# analog-keyboard-humanizer

./: Analog Gamepad Helper.html  CMakeLists.txt  humanizer_tuner.html
src/: humanizer.c  humanizer.h  main.c  tud_xinput.c  tusb_config.h  usb_descriptors.c
